litmask/tests/compile/mask_concat_mixed_kinds.stderr
error: concat! arguments inside mask! must be string, byte string, or C string literals
 --> tests/compile/mask_concat_mixed_kinds.rs:9:19
  |
9 |     let _ = mask!(concat!("a", b"b"));
  |                   ^^^^^^
